Finished most design of the website

--- a/archive.html
+++ b/archive.html
@@ -48,7 +48,7 @@
 				<div class="row">
 					<div class="col-lg-12 left-search-field">
 						<form class="form-inline p-3">
-							<input class="form-control" type="search" placeholder="Search" aria-label="Search">
+							<input class="form-control mb-1" type="search" placeholder="Search" aria-label="Search">
 							<button class="btn search-btn" type="submit">Search</button>
 						</form>
 					</div>
@@ -68,13 +68,13 @@
 									</div>
 									<div class="col-md-8">
 										<div class="post-card-text">
-											<h2 class="post-card-title mb-1">TitleLorem iem ipet</h2>
+											<a href="post.html"><h2 class="post-card-title mb-1">TitleLorem iem ipet</h2></a>											
 											<p class="post-card-author">Author</p>
 											<p class="post-card-paragraph mb-1">Lorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dol</p>
-											<a href="#" class="post-card-link">Link</a>
+											<a href="post.html" class="post-card-link">Link</a>
 										</div>
 									</div>
 								</div>
@@ -86,13 +86,13 @@
 									</div>
 									<div class="col-md-8">
 										<div class="post-card-text">
-											<h2 class="post-card-title mb-1">TitleLorem iem ipet</h2>
+											<a href="post.html"><h2 class="post-card-title mb-1">TitleLorem iem ipet</h2></a>											
 											<p class="post-card-author">Author</p>
 											<p class="post-card-paragraph mb-1">Lorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dol</p>
-											<a href="#" class="post-card-link">Link</a>
+											<a href="post.html" class="post-card-link">Link</a>
 										</div>
 									</div>
 								</div>
@@ -104,13 +104,13 @@
 									</div>
 									<div class="col-md-8">
 										<div class="post-card-text">
-											<h2 class="post-card-title mb-1">TitleLorem iem ipet</h2>
+											<a href="post.html"><h2 class="post-card-title mb-1">TitleLorem iem ipet</h2></a>											
 											<p class="post-card-author">Author</p>
 											<p class="post-card-paragraph mb-1">Lorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dolLorem iem ipet, consectetur adi ipsum
 												dolor sit amet. UtLorem ipsum dol</p>
-											<a href="#" class="post-card-link">Link</a>
+											<a href="post.html" class="post-card-link">Link</a>
 										</div>
 									</div>
 								</div>
