--- a/post.html
+++ b/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Post Page</title>
+	<title>Individual Page</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="custom theme template for ixd618">
@@ -26,8 +26,8 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-      			<li class=" nav-item">
-				<a class="nav-link text-uppercase pl-4 pr-4" href="index.html">Home</a>
+				<li class=" nav-item">
+					<a class="nav-link text-uppercase pl-4 pr-4" href="index.html">Home</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link text-uppercase pl-4 pr-4" href="archive.html">Blogs</a>
@@ -44,46 +44,46 @@
 
 	<container>
 		<div class="row">
-			<div class="left-content col-lg-3">sad</div>
+			<div class="left-content col-lg-3" style="background-image: url('images/candy2.jpg');">
+				<div class="row">
+					<div class="col-lg-12 left-search-field">
+						<form class="form-inline p-3">
+							<input class="form-control mb-1" type="search" placeholder="Search" aria-label="Search">
+							<button class="btn search-btn" type="submit">Search</button>
+						</form>
+					</div>
+				</div>
+			</div>
 			<div class="right-content col-lg-8">
-				<div class="container pt-5 mb-5">
-					<header class="page-title text-center">
-						<h1 class="heading">Blogs</h1>
+				<div class="container pt-5 mb-5 pl-5 pr-5">
+					<header class="page-title">
+						<h1 class="heading">Article</h1>
 					</header>
-					<div class="about-content mt-4">
-						<div class="about-image"></div>
-						<div class="row about-card-container mt-4">
-							<div class="col-md-4">
-								<div class="card">
-									<img src="images/donut-icon2.png" class="card-img" alt="Image 1">
-									<div class="card-body pl-5 pr-5">
-										<p class="card-text">Lorem iem ipet, consectetur adi ipsum dolor sit amet.
-											UtLorem
-											ipsum dolor sit amet. Ut </p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="card">
-									<img src="images/donut-icon3.png" class="card-img" alt="Image 1">
-									<div class="card-body pl-5 pr-5">
-										<p class="card-text">Lorem ipsum dolor saem ipsum dolor sit amet, consectum
-											dolor
-											sit amet. Ut </p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="card">
-									<img src="images/donut-icon4.png" class="card-img" alt="Image 1">
-									<div class="card-body pl-5 pr-5">
-										<!-- Use a Lorem Ipsum generator to generate placeholder text for the card body -->
-										<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-											Sed
-											it. </p>
-									</div>
-								</div>
-							</div>
+					<div class="article-content mt-4">
+						<div class="article-author mb-4">
+							<p>By <span class="author-name">John Doe</span></p>
+							<p><span class="article-date">September 1, 2021</span></p>
+						</div>
+						<div class="article-image">
+							<img src="images/candy3.png" alt="">
+						</div>
+						<div class="article-text mt-4">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, diam vel tincidunt
+								ultrices, velit sapien lacinia nunc, vel tincidunt sapien velit vel velit. Sed euismod,
+								diam vel tincidunt ultrices, velit sapien lacinia nunc, vel tincidunt sapien velit vel
+								velit.</p>
+							<p>Nulla facilisi. Sed euismod, diam vel tincidunt ultrices, velit sapien lacinia nunc, vel
+								tincidunt sapien velit vel velit. Sed euismod, diam vel tincidunt ultrices, velit sapien
+								lacinia nunc, vel tincidunt sapien velit vel velit.</p>
+							<p>Diam vel tincidunt ultrices, velit sapien lacinia nunc, vel tincidunt
+								sapien velit vel velit. Sed euismod, diam vel tincidunt ultrices, velit sapien lacinia
+								nunc, vel tincidunt sapien velit vel velit.</p>
+							<p>Velit sapien lacinia nunc, vel tincidunt
+								sapien velit vel velit. Sed euismod, diam vel tincidunt ultrices, velit sapien lacinia
+								nunc, vel tincidunt sapien velit vel velit.</p>
+							<p>Tincidunt ultrices, velit sapien lacinia nunc, vel tincidunt
+								sapien velit vel velit. Sed euismod, diam vel tincidunt ultrices, velit sapien lacinia
+								nunc, vel tincidunt sapien velit vel velit.</p>
 						</div>
 					</div>
 				</div>
